src/objects/CourseMaster__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AverageCourseCost__c</fullName>
        <label>AverageCourseCost</label>
        <summarizedField>Lecture__c.Course_Charge__c</summarizedField>
        <summaryForeignKey>Lecture__c.CourseMaster__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lecturer_Name__c</fullName>
        <label>Lecturer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Amount__c</fullName>
        <label>Test Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CourseMaster</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CourseMaster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CourseMasters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>